Fix side bar spacing

--- a/components/layout/TwoColumn/TwoColumn.module.scss
+++ b/components/layout/TwoColumn/TwoColumn.module.scss
@@ -27,4 +27,8 @@
   @include mq($from: tablet) {
     width: 30%;
   }
+
+  > * {
+    margin-bottom: var(--vertical-spacing);
+  }
 }
