--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,7 +42,7 @@ li {
   padding: 0;
 
   &::marker {
-    color: var(--color-bullets);
+    color: var(--color-text-reverse);
   }
 }
 
